# eventai

./: .commit-message.md  .gitignore
.beads/: export-to-github.sh  github-mapping.json  issues.jsonl
.beads/work/: eventai-bcw8-structure-design.md  eventai-ggg7-evidence-map.md  eventai-si30-verification-report.md
.claude/: settings.json
.claude/commands/: commit.md  generate-infographic.md  ig-evaluate.md  ig-generate-prompt.md  ig-generate.md  infographics-bestpractices.md  narrative-add-media.md  narrative-refine-validate.md  narrative-revise.md  optimize-tokens.md  section-create.md  section-publish.md  section-rc.md  section-revise.md  test-visual-prompt-density.md  textbook-bestpractices.md  todd-image-convert.md  validate.md
.claude/helpers/: SECTION-WORKFLOW-GUIDE.md  section-commands.md  section-workflow.sh
.claude/prompts/: handoff.md
.claude/scripts/: gemini_generate.py  generate-infographic.py  setup.py
.claude/skills/: claude-settings-bp.md  claude-tdd-bp.md  gemini-generate.md  generate-infographic-auto.prompt.md  generate-infographic.prompt.md  narrative-bp.md  section-create.md  section-publish.md  section-revise.md  tdd-bp.md  validate.md
.claude/templates/: infographic-commit-message.md
client-cli/py/: format_docx_images.py  justify_docx.py
client-cli/py/docutil/: README.md  pyproject.toml
client-cli/py/docutil/docutil/: __init__.py  cli.py  core.py
docs/lemmy/: NEXT-STEPS-FIRST-INFOGRAPHIC.md  PROTOTYPE-DESIGN.md  README.md
docs/research/: GATE-P1-REVIEW-PACKET.md  README.md  RESEARCH-REQUESTS.md  education-curriculum.prompt.md  (+6 more)
(+355 files in other folders)
